--- a/evdekinisatcom.MvcWebApp.WebMvc/Views/Shared/_LayoutBase.cshtml
+++ b/evdekinisatcom.MvcWebApp.WebMvc/Views/Shared/_LayoutBase.cshtml
@@ -109,10 +109,7 @@
                                                 </li>
                                                 <li>
                                                     <a asp-action="Index" asp-controller="Product">Tüm Ürünler</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">Fiyatı Düşenler!<div class="lable-nav">İndirim!</div></a>
-                                                </li>
+                                                </li>                                                
                                                 <li>
                                                     <a href="#">Öne Çıkanlar!</a>
                                                 </li>
@@ -377,12 +374,8 @@
                                             
                                             <li><a asp-action="Index" asp-controller="Home">Anasayfa</a></li>
                                             
-                                            <li><a asp-action="Index" asp-controller="Product">Tüm Ürünler</a></li>
-                                           
-                                            <li class="mega" id="hover-cls">
-                                                <a href="#">Fiyatı Düşenler!</a>
-
-                                            </li>
+                                            <li><a asp-action="Index" asp-controller="Product">Tüm Ürünler</a></li>                                           
+                                            
                                             <li>
                                                 <a href="#">Öne Çıkanlar</a>                                                
                                             </li>
@@ -429,8 +422,8 @@
                                             <li class="onhover-div mobile-setting">
                                                 <div>
                                                     <a asp-action="Create" asp-controller="Product">
-                                                        <img src="~/themes/assets/images/icon/setting.png"
-                                                             class="img-fluid blur-up lazyload" alt=""> <i class="ti-settings"></i>
+                                                        <img src="~/themes/assets/images/icon/icons8-plus-23.png"
+                                                             class="img-fluid blur-up lazyload" alt=""> <i class="ti-plus"></i>
                                                     </a>
                                                     
                                                 </div>
@@ -442,64 +435,7 @@
                                                     <img src="~/themes/assets/images/icon/cart.png"
                                                              class="img-fluid blur-up lazyload" alt=""> <i class="ti-shopping-cart"></i>
                                                     
-                                                </div>
-                                                <ul class="show-div shopping-cart">
-                                                    <li>
-                                                        <div class="media">
-                                                            <a href="#">
-                                                                <img class="me-3"
-                                                                     src="~/themes/assets/images/electronics/pro/1.jpg"
-                                                                     alt="Generic placeholder image">
-                                                            </a>
-                                                            <div class="media-body">
-                                                                <a href="#">
-                                                                    <h4>item name</h4>
-                                                                </a>
-                                                                <h4><span>1 x $ 299.00</span></h4>
-                                                            </div>
-                                                        </div>
-                                                        <div class="close-circle">
-                                                            <a href="#">
-                                                                <i class="fa fa-times"
-                                                                   aria-hidden="true"></i>
-                                                            </a>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div class="media">
-                                                            <a href="#">
-                                                                <img class="me-3"
-                                                                     src="~/themes/assets/images/electronics/pro/7.jpg"
-                                                                     alt="Generic placeholder image">
-                                                            </a>
-                                                            <div class="media-body">
-                                                                <a href="#">
-                                                                    <h4>item name</h4>
-                                                                </a>
-                                                                <h4><span>1 x $ 299.00</span></h4>
-                                                            </div>
-                                                        </div>
-                                                        <div class="close-circle">
-                                                            <a href="#">
-                                                                <i class="fa fa-times"
-                                                                   aria-hidden="true"></i>
-                                                            </a>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div class="total">
-                                                            <h5>subtotal : <span>$299.00</span></h5>
-                                                        </div>
-                                                    </li>
-                                                    <li>
-                                                        <div class="buttons">
-
-                                                            <a  asp-action="Index" asp-controller="Cart" class="view-cart">
-                                                                Sepeti Görüntüle
-                                                            </a> <a href="#" class="checkout">checkout</a>
-                                                        </div>
-                                                    </li>
-                                                </ul>
+                                                </div>                                               
                                             </li>
                                         </ul>
                                     </div>
@@ -750,7 +686,7 @@
                                                 <h6>
                                                     <i class="fa fa-check"></i>Item
                                                     <span>men full sleeves</span>
-                                                    <span> successfully added to your Cart</span>
+                                                    <span> Başarıyla Sepete Eklendi</span>
                                                 </h6>
                                             </a>
                                             <div class="buttons">
